@@ -44,7 +44,8 @@
     float: none;
 }
 
-#tab-options ul {
+#tab-options ul,
+#content ul.searchResults {
     list-style-type: none;
     margin-left: 0;
 }
@@ -82,11 +83,11 @@
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
 }
 
-.searchingLoader dl.searchResults {
+.searchingLoader .searchResults {
     background: url(++resource++rer.sitesearch.images/loader.gif) no-repeat scroll 50% 0 transparent;
 }
 
-#content #search-results div.documentLocation {
+#content #search-results .documentLocation {
     color: #578308;
     font-style: italic;
 }
@@ -96,31 +97,13 @@ h4.resultTitle {
 }
 
 /* solr support */
-.elevatedItem {
-    width: 100%;
-}
-
-dt.elevatedItem {
-    padding-left: 20px;
-}
-
-dt.elevatedItem .elevatedLabel {
-    float: right;
-}
-
-dd.elevatedItem,
-dt.elevatedItem .itemTitle {
-    background-color: #e3e3e3;
-}
-
-dt.elevatedItem .itemTitle {
-    width: 100%;
+.searchResults .elevatedItem {
     clear: both;
-    padding: 0.5em;    
+    padding: 0.8em 1em;
+    background-color: #E3E3E3;
 }
 
-
-#content dd.elevatedItem {
-    margin-left: 20px;
-    padding: 0.5em;
+.searchResults .elevatedLabel {
+    float: right;
+    font-weight: bold;
 }
