@@ -7,6 +7,7 @@ Changelog
 - Add support to collective.solr [cekk]
 - Add configuration to limit word length and number of words in SearchableText
   [cekk]
+- Rewrite html for search results [cekk]
 
 2.3.3 (2014-02-20)
 ------------------
